# rusty_pipes

./: Cargo.toml  README.md
examples/: cli.rs  filter.json  join.json  lastnames.csv  pipeline.json  test.csv
src/: core.rs  engine.rs  lib.rs  loaders.rs  main.rs  transformations.rs
src/core/: context.rs  dataframe.rs  engine.rs  error.rs  mod.rs  result.rs
src/core/dataframe/: mod.rs
src/core/definitions/: column.rs  data_source.rs  pipeline.rs  transformation.rs
src/core/engine/: engine.rs
src/core/loaders/: file.rs  loader.rs  mod.rs
src/core/transformations/: filter.rs  inner_join.rs  mod.rs  transformation.rs
src/dataframe/: data_frame.rs  mod.rs
src/dataframe/loaders/: file.rs  mod.rs
src/definitions/: column.rs  data_source.rs  mod.rs  pipeline.rs  transformation.rs
src/engine/: engine.rs
src/loaders/: file.rs  loader.rs
src/transformations/: filter.rs  inner_join.rs  mod.rs  transformation.rs
