[package]
name = "rusty_pipes"
version = "0.0.1"
edition = "2021"
description = "A library that enables you to declaratively define your data sources and transformation pipelines, with an engine to fetch data and run said pipeline."
license = "MIT"
keywords = ["data", "transformation", "pipeline", "ETL", "declarative"]
exclude = [".github/", ".gitignore"]
repository = "https://github.com/hgrsd/rusty_pipes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "cli"

[dependencies]
csv = "1.3.0"
rayon = "1.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
